Feature/#55 (#59)
* feat: query-normalizr (#55)

* Update README.md

* fix: some suggestions

* feat: optmize query normalizr (#58)

* feat: swagen support query normalizr (#55)

* fix: yarn lock

* fix: add typings to query-normalizr

* fix: make test pass

* fix: ci break
